add basic thesis chapters

--- a/thesis/include/coverpage.tex
+++ b/thesis/include/coverpage.tex
@@ -5,6 +5,7 @@
 \thesis{Large Document Thesis}
 %\graduation{?}
 \author{
+  Moritz Wilhelm Lumme
   \matriculationnumber{4799758}
   \dateofbirth{14.03.2000}
   \placeofbirth{Dresden}
