add bibliography functionality

--- a/thesis/include/introduction.tex
+++ b/thesis/include/introduction.tex
@@ -2,3 +2,8 @@
 
 Lorem Ipsum Dolor Si Amet.
 This is a rather long text that will hopefully span across multiple lines and has at least a break as well as an acronym in it, look: \ac{cd}.
+\ac{cd}, \ac{cd}, \acl{cd}, \acs{cd}, \acf{cd}.
+\Ac{cd}, \Ac{cd}, \Acl{cd}, \Acs{cd}, \Acf{cd}.
+\Acfp{cd}, \aclp{cd}.
+
+This is going to be a quote \cite{knuth86}.
