bootstrap figure generation from benchmark data

--- a/thesis/include/introduction.tex
+++ b/thesis/include/introduction.tex
@@ -1,4 +1,8 @@
 \chapter{Introduction}
+\label{chap:introduction}
+
+\section{test}
+\label{sec:test}
 
 Lorem Ipsum Dolor Si Amet.
 This is a rather long text that will hopefully span across multiple lines and has at least a break as well as an acronym in it, look: \ac{cd}.
@@ -7,3 +11,17 @@ This is a rather long text that will hopefully span across multiple lines and ha
 \Acfp{cd}, \aclp{cd}.
 
 This is going to be a quote \cite{knuth86}.
+
+\section{plottest}
+\label{sec:plottest}
+
+This section should show a plot:
+
+\begin{figure}
+  \centering
+  \includestandalone{figures/scan-speed-optimal}
+  \caption{A very simple graph plot}
+  \label{fig:simple-graph-plot}
+\end{figure}
+
+The end?
