--- a/thesis/ldoc-thesis.tex
+++ b/thesis/ldoc-thesis.tex
@@ -10,6 +10,7 @@
 \usepackage{csquotes}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
 \addbibresource{lit.bib}
+\usepackage[mode=build,subpreambles=true,sort]{standalone}
 
 \begin{document}
 
