move latexmk configuration to latexmkrc

--- a/thesis/include/coverpage.tex
+++ b/thesis/include/coverpage.tex
@@ -15,6 +15,6 @@
 \matriculationyear{2018}
 \supervisor{Dr.-Ing. Adam Lackorzynski}
 \professor{Prof. Dr.-Ing. Horst Schirmeier}
-\date{\today}
+\date{26.01.2023}
 %\makecover
 \maketitle
