outsource figure generation

--- a/thesis/figures/boot-time-vm.tex
+++ b/thesis/figures/boot-time-vm.tex
@@ -1,5 +1,8 @@
 \documentclass[class=minimal,border=0pt]{standalone}
 
+\usepackage{fontspec}
+\usepackage{caption}
+\usepackage{tudscrfonts}
 \usepackage{tudscrcolor}
 \usepackage{pgfplots}
 
