--- a/thesis/figures/relative-memory-savings-vms.tex
+++ b/thesis/figures/relative-memory-savings-vms.tex
@@ -1,7 +1,11 @@
 \documentclass[class=minimal,border=0pt]{standalone}
 
+\usepackage{fontspec}
+\usepackage{caption}
+\usepackage{tudscrfonts}
 \usepackage{tudscrcolor}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 
 \begin{document}
 
