--- a/thesis/ldoc-thesis.tex
+++ b/thesis/ldoc-thesis.tex
@@ -12,7 +12,8 @@
 \usepackage{csquotes}
 \usepackage[backend=biber,style=numeric]{biblatex}
 \addbibresource{lit.bib}
-\usepackage[mode=build,subpreambles=true,sort]{standalone}
+%\usepackage[mode=build,subpreambles=true,sort]{standalone}
+\usepackage[mode=image]{standalone}
 
 \begin{document}
 
