--- a/thesis/figures/page-distribution-turbobench-silesia.tex
+++ b/thesis/figures/page-distribution-turbobench-silesia.tex
@@ -1,7 +1,12 @@
 \documentclass[class=minimal,border=0pt]{standalone}
 
+\usepackage{fontspec}
+\usepackage{caption}
+\usepackage{tudscrfonts}
 \usepackage{tudscrcolor}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usetikzlibrary{patterns}
 
 \begin{document}
 
