--- a/thesis/figures/scan-speed.tex
+++ b/thesis/figures/scan-speed.tex
@@ -1,8 +1,12 @@
 \documentclass[class=minimal,border=0pt]{standalone}
 
+\usepackage{fontspec}
+\usepackage{caption}
+\usepackage{tudscrfonts}
 \usepackage{tudscrcolor}
 \usepackage{amsmath}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 
 \begin{document}
 
