--- a/thesis/include/conclusion.tex
+++ b/thesis/include/conclusion.tex
@@ -7,7 +7,7 @@ By encapsulating functionality into distinct components, \ac{spmm} encouraged co
 In addition to that, this encapsulation technique allowed a clear and easy-to-use framework to be developed.
 It features pluggable components that can be freely combined to specify arbitrary \ac{cbps} implementations while relying solely on common virtual memory abstractions of the underlying \ac{os}.
 
-The reference implementation in the \ac{l4re} real-time \ac{os} is another major contribution of this thesis.
+The reference implementation in the \acl{l4re} is another major contribution of this thesis.
 As the first implementation in a microkernel-based system, it underlined the validity and general applicability of the framework design.
 It also enriched the \ac{l4re} ecosystem of service software with \ac{cbps} functionality.
 
@@ -19,7 +19,7 @@ In terms of security, the evaluation picture was rather bleak.
 The \ac{spmm} inherits the non-negligible management overhead and vulnerability to timing attacks of most \ac{cbps} implementations.
 However, the \ac{spmm} design is very successful in limiting the scope of these effects in the system and explicitly allows for the addition of protective measures in future work.
 
-Given these results, I believe that the effects of page deduplication remain an exciting research topic in all kinds of environments.
+Given these results, I believe that page deduplication remains an exciting research topic in all kinds of environments.
 
 \section{Future Work}
 \label{sec:future-work}
@@ -27,7 +27,7 @@ Given these results, I believe that the effects of page deduplication remain an 
 This thesis enables a variety of further investigations.
 
 For the \ac{spmm} service, subsequent efforts could focus on refining and replacing existing component implementations.
-As mentioned earlier in this thesis, there is a lot of potential for optimisation, for example in terms of better synchronisation or better protection against side-channel attacks.
+As mentioned earlier in this thesis, there is a lot of potential for optimisation, for example in terms of better synchronisation, better thrashing prevention or better protection against side-channel attacks.
 This would not only yield performance benefits, but also increase the applicability of the \ac{spmm} service in realistic deployment scenarios.
 Alternatively, it might be a good idea to implement the \ac{spmm} design in another \ac{os} to get valuable feedback on the general validity of the core framework API.
 
