--- a/thesis/include/design.tex
+++ b/thesis/include/design.tex
@@ -164,4 +164,4 @@ Figure \ref{fig:umlcd} illustrates the total set of components, their functions,
   \label{fig:umlcd}
 \end{figure}
 
-The next chapter outlines the implementation of this design in the industry-proven, production-ready \ac{l4re} real-time\ac{os}.
+The next chapter outlines the implementation of this design in the industry-proven \acl{l4re}.
