--- a/thesis/include/introduction.tex
+++ b/thesis/include/introduction.tex
@@ -30,7 +30,7 @@ As a result, \acp{vm} experience a large overall memory footprint and the main m
 This development is forcing cloud providers to equip machines with hundreds of GiB of memory, which is not only expensive and increases the financial burden on customers, but also amplifies power consumption.
 Minimising the memory footprint is equally important for \Ac{iot} devices.
 Inefficient memory usage results in higher power consumption, slower processing times, and increased wear and tear on hardware components.
-For this class of devices, such symptoms need to be avoided at all costs, as minimal production expenses due to the resource-constrained nature of hardware components and longevity in remote deployments are key.
+For this class of devices, such symptoms must be avoided at all costs, as minimal production expenses due to the resource-constrained nature of hardware components and longevity in remote deployments are key.
 
 An effective way to minimise memory footprints and reduce overall memory pressure in a system is to use page deduplication techniques such as \acf{cbps}.
 Due to redundant software instances or replicated data, memory duplication, where multiple copies of the same data are stored at different addresses in memory, occurs as a common phenomenon.
