--- a/thesis/include/related-work.tex
+++ b/thesis/include/related-work.tex
@@ -35,10 +35,10 @@ In summary, I note that existing implementations are either closed-source or tai
 This thesis removes the tie to a specific \ac{os} and presents a modern, object oriented and \ac{os}-agnostic approach to \ac{cbps}.
 Furthermore, this thesis addresses a gap in the landscape of readily available \ac{cbps} implementations.
 To the best of my knowledge, no such functionality has yet been implemented in a microkernel-based \ac{os}.
-For this reason, and to highlight its general applicability, this thesis provides a reference implementation of the aforementioned new approach in the \ac{l4re} real-time \ac{os}.
+For this reason, and to highlight its general applicability, this thesis provides a reference implementation of the aforementioned new approach in the \acl{l4re}.
 
 The remaining part of this thesis is organised as follows.
 Chapter \ref{chap:design} presents the overall approach and describes the main design decisions of the new framework.
 Chapter \ref{chap:implementation} presents the reference implementation in \ac{l4re}.
 The performance and security evaluation of the implementation is conducted in chaper \ref{chap:evaluation}.
-Chapter \ref{chap:conclusion} summarises the work and my conclusions conclusions.
+Chapter \ref{chap:conclusion} summarises the work and my conclusions.
