--- a/thesis/lit.bib
+++ b/thesis/lit.bib
@@ -111,7 +111,8 @@
 }
 
 @misc{l4re-spm,
-  author = {L4Re same-page merging},
+  author = {Moritz Lumme},
+  title  = {L4Re same-page merging},
   note   = {\url{https://github.com/m00wl/l4re-spm}}
 }
 
