--- a/thesis/include/implementation.tex
+++ b/thesis/include/implementation.tex
@@ -1,7 +1,7 @@
 \chapter{Implementation}
 \label{chap:implementation}
 
-To analyse the practical relevance and the general applicability of the \ac{spmm} design, I provide a reference implementation in the \ac{l4re} \ac{os} \cite{l4re}.
+To analyse the practical relevance and the general applicability of the \ac{spmm} design, I provide a reference implementation in the \acl{l4re} \cite{l4re}.
 Changes to the \ac{os} and new code are described in the following sections.
 All architectural and \ac{os}-related remarks refer to \ac{l4re} on \texttt{AArch64}, the 64-bit variant of the Arm architecture family.
 The source code for this implementation is publicly available online at \cite{l4re-spm}.
